Fixed 'read more' area not showing correctly in dark mode.

--- a/src/routes/Root.css
+++ b/src/routes/Root.css
@@ -444,7 +444,11 @@ body {
   bottom: 0;
   width: 100%;
   height: 100px;
-  background: linear-gradient(to bottom, transparent 0%, white 60%);
+  background: linear-gradient(
+    to bottom,
+    transparent 0%,
+    var(--bg-color-card) 60%
+  );
   padding-bottom: 0.5em;
 }
 
